Added some styling to Header and navbar, also added logo pic and html for logo in navbar

--- a/header.html
+++ b/header.html
@@ -9,6 +9,11 @@
 </head>
 <body>
 <header class="header">
+    <div class="logo">
+    <a href="index.html">
+      <img src="assets\images\lubalogo.avif" alt="LUBA loga" class="logo-img">
+    </a>
+  </div>
   <nav class="nav">
     <a href="index.html">Hem</a>
     <a href="#">Tjänster</a>
