--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,7 @@
+<footer>    
+
+
+
 <p>Footer</p>
 
 
@@ -5,12 +9,13 @@
 
 
 
-<p>© 2024 My Website</p>
+<p>© 2025 LUBA PROJECT</p>
+<p>Developed by adsite.se</p>
 
 
 
 
-
+</footer>   
 
 </body> 
 </html>
