added some new images, and added basic body styling

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <section class="hero">
             <div id="slider">
                 <figure>
-                    <img src="assets\images\luba3.png">
-                    <img src="assets\images\luba1.png">
-                    <img src="assets\images\luba2.png">
-                    <img src="assets\images\luba4.png">
-                    <img src="assets\images\luba3.png">
+                    <img src="assets\images\luba3.webp">
+                    <img src="assets\images\luba1.webp">
+                    <img src="assets\images\luba2.webp">
+                    <img src="assets\images\luba4.webp">
+                    <img src="assets\images\luba3.webp">
                 </figure>
             </div>
         </section>
